export enum Color {
    WHITE,
    BLACK
}